Fixed a bug with z-index.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -64,6 +64,8 @@ a.heroCTA {
   align-items: center;
   justify-content: center;
   text-decoration: none;
+  z-index: 1;
+  position: relative;
 }
 
 .heroCTA svg {
@@ -85,4 +87,5 @@ a.heroCTA {
   position: absolute;
   top: -450px;
   left: 45px;
+  z-index: 0;
 }
